# ChemNames

./: README.md  add_keggs.py  handler2.py  main.py  pyproject.toml
.github/workflows/: publish-pypi.yml
chemnames/: cli.py
