[project]
name = "chemnames"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "pandas>=2.3.3",
    "pubchempy>=1.0.5",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[project.scripts]
addchemnames = "chemnames.cli:entry_point"
